tdf#64654 create no extra SdrModels, do not insert PresObj

Corrected to not create SdrModels for each inserted Slide, also
corrected SdrPresObj creation/usage in combination with
AutoLayout.

Change-Id: I40b3d4ae71bbfa3763b6b98756dae3d6aa2cae33